--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/outsideTweets/outsideTweets",
   "dependencies": {
     "express": "^4.7.0",
-    "twit": "^1.1.18"
+    "twit": "^1.1.18",
+    "wit": "^1.3.2"
   }
 }
