--- a/package.json
+++ b/package.json
@@ -19,10 +19,7 @@
   "dependencies": {
     "express": "^4.7.0",
     "twit": "^1.1.18",
-<<<<<<< HEAD
+    "twitter": "^0.2.9",
     "wit": "^1.3.2"
-=======
-    "twitter": "^0.2.9"
->>>>>>> dd13a1dbd799aaaa3d23ca68aef6c82d120817db
   }
 }
