--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.7.0",
     "twit": "^1.1.18",
-    "twitter": "^0.2.9"
+    "twitter": "^0.2.9",
+    "wit": "^1.3.2"
   }
 }
