--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/outsideTweets/outsideTweets",
   "dependencies": {
     "express": "^4.7.0",
+    "request": "^2.39.0",
     "twit": "^1.1.18",
     "twitter": "^0.2.9",
     "wit": "^1.3.2"
