--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.7.0",
     "twit": "^1.1.18",
     "twitter": "^0.2.9",
-    "wit": "^1.3.2"
+    "wit": "^1.3.2",
+    "sentiment": "^1.0.1"
   }
 }
