--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "twit": "^1.1.18",
     "twitter": "^0.2.9",
     "wit": "^1.3.2",
-    "sentiment": "^1.0.1"
+    "sentiment": "^1.0.1",
+    "mongoose": "^3.8.14"
   }
 }
