--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   "homepage": "https://github.com/outsideTweets/outsideTweets",
   "dependencies": {
     "express": "^4.7.0",
+    "mongoose": "^3.8.14",
     "request": "^2.39.0",
+    "sentiment": "^1.0.1",
     "twit": "^1.1.18",
     "twitter": "^0.2.9",
-    "wit": "^1.3.2",
-    "sentiment": "^1.0.1",
-    "mongoose": "^3.8.14"
+    "wit": "^1.3.2"
   }
 }
