--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sentiment": "^1.0.1",
     "twit": "^1.1.18",
     "twitter": "^0.2.9",
-    "wit": "^1.3.2"
+    "wit": "^1.3.2",
+    "moment": "^2.7.0"
   }
 }
